@@ -3,5 +3,6 @@ copy "Data Files\changelog.txt" "debug\changelog.txt"
 copy "Data Files\configuration.txt" "debug\configuration.txt"
 copy "Data Files\country_mappings.txt" "debug\country_mappings.txt"
 copy "Data Files\culture_mappings.txt" "debug\culture_mappings.txt"
+copy "Data Files\religion_mappings.txt" "debug\religion_mappings.txt"
 copy "Data Files\province_mappings.txt" "debug\province_mappings.txt"
 copy "Data Files\readme.txt" "debug\readme.txt"
