@@ -6,11 +6,11 @@ link = { ck2 = cathar  eu3 = catholic }
 link = { ck2 = fraticelli  eu3 = catholic }
 link = { ck2 = waldensian  eu3 = catholic }
 link = { ck2 = lollard  eu3 = catholic }
-link = { ck2 = orthodox  eu3 = catholic }
-link = { ck2 = bogomilist  eu3 = catholic }
-link = { ck2 = iconoclast  eu3 = catholic }
-link = { ck2 = monophysite  eu3 = catholic }
-link = { ck2 = nestorian  eu3 = catholic }
+link = { ck2 = orthodox  eu3 = orthodox }
+link = { ck2 = bogomilist  eu3 = orthodox }
+link = { ck2 = iconoclast  eu3 = orthodox }
+link = { ck2 = monophysite  eu3 = orthodox }
+link = { ck2 = nestorian  eu3 = orthodox }
 link = { ck2 = sunni  eu3 = sunni }
 link = { ck2 = zikri  eu3 = sunni }
 link = { ck2 = yazidi  eu3 = sunni }
