@@ -45,6 +45,7 @@ class CK2Character
 		int							getNum()					const { return num; };
 		string						getName()				const { return name; };
 		string						getCulture()			const { return culture; };
+		string						getReligion()			const { return religion; };
 		CK2Dynasty*					getDynasty()			const { return dynasty; };
 		date							getBirthDate()			const { return birthDate; };
 		bool							isDead()					const { return dead; };
